@@ -1,3 +1,8 @@
+2012-09-07  Roland Winkler  <winkler@gnu.org>
+	* lisp/bbdb.el (bbdb-accept-name-mismatch): Allow value being a
+	regexp or function.
+	* lisp/bbdb-mua.el (bbdb-annotate-message): Use these new values.
+
 2012-09-01  Roland Winkler  <winkler@gnu.org>
 	* lisp/bbdb-mua.el (bbdb-mua-edit-field): Bug fix.
 
